# teafyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
skills/tea-tools/: SKILL.md
src/teafyi/: __init__.py  api.py  cli.py  mcp_server.py
tests/: test_api.py
